añadiendo boton de compartir + frases pistoleros del eclipse

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <ul class="nav navbar-nav">
           <li><a onclick="$('#section-yung-beef').animatescroll()">Yung Beef</a></li>
           <li><a onclick="$('#section-cecilio').animatescroll()">Cecilio</a></li>
-          <li><a href="#">Pistoleros del Eclipse</a></li>
+          <li><a href="$('#section-pistoleros').animatescroll()">Pistoleros del Eclipse</a></li>
           <li><a href="#">Kid Keo</a></li>
+          <li><a href="#">Trabaja con nosotros</a></li>
         </ul>
       </div>
     </nav>
@@ -69,18 +70,16 @@
           </div>
         </div>
         <div class="play-button">
-          <button type="button" class="btn btn-primary btn-sm">
-            <img src="images/play-button-image.png" width="30" />
-          </button>
+          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-play"></span> Escuchar</button>
         </div>
-        <a class="download-button"  href="audios/cecilio/mehanviolado.ogg" download="frases-del-trap.mp3">
-          <button type="submit" class="btn btn-primary btn-sm">
-            <img src="images/download-button-image.png" width="30" />
-          </button>
+        <a class="download-button"  href="puta_mofa_de_audio.ogg" download="frases-del-trap.mp3">
+          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-download-alt"></span>   Descargar</button>
+        </a>
+        <a class="download-button"  href="audios/cecilio/frases-del-trap.ogg" download="frases-del-trap.mp3">
+          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-share"></span> Comparte con tus colegas</button>
         </a>
       </li>
     </ul>
   </div>
 </body>
-
 </html>
