añadiendo botón de compartir

--- a/index.html
+++ b/index.html
@@ -17,11 +17,24 @@
   <script src="libraries/animatescroll.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="controller.js"></script>
+
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share-kit/1.0.15/css/social-share-kit.css" type="text/css">
 </head>
 
 <body>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+
+      <div class="ssk-group">
+          <a href="" class="ssk ssk-facebook"></a>
+          <a href="" class="ssk ssk-twitter"></a>
+          <a href="" class="ssk ssk-google-plus"></a>
+          <a href="" class="ssk ssk-pinterest"></a>
+          <a href="" class="ssk ssk-tumblr"></a>
+      </div>
+
+      <a href=”fb-messenger://share/?link='https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fsharing%2Freference%2Fsend-dialog'&app_id=”>Send In Messenger</a>
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -75,7 +88,7 @@
         <a class="download-button"  href="puta_mofa_de_audio.ogg" download="frases-del-trap.mp3">
           <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-download-alt"></span>   Descargar</button>
         </a>
-        <a class="download-button"  href="audios/cecilio/frases-del-trap.ogg" download="frases-del-trap.mp3">
+        <a class="share-button">
           <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-share"></span> Comparte con tus colegas</button>
         </a>
       </li>
