actualizando proyecto + misc + animaciones y fondos vapor

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="controller.js"></script>
 
-  <link rel="icon" href="http://example.com/favicon.png">
+  <link rel="icon" href="images/hakim_mouse.png">
 
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=2391736657811319&autoLogAppEvents=1"></script>
@@ -33,20 +33,16 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Elige el personaje</a>
+          <a class="navbar-brand" href="#">Elige ➡️➡️</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a onclick="$('#section-yung-beef').animatescroll()">Yung Beef</a></li>
           <li><a onclick="$('#section-cecilio').animatescroll()">Cecilio</a></li>
           <li><a onclick="$('#section-pistoleros').animatescroll()">Pistoleros</a></li>
           <li><a onclick="$('#section-kidkeo').animatescroll()">Kidd Keo</a></li>
+          <li><a onclick="$('#section-misc').animatescroll()">Misc</a></li>
           <li id="workWithUs">
             <a>€ Trabaja con nosotros €</a>
-            <script>
-              $('#workWithUs').on('click touchstart', function () {
-                alert("Escribenos en @frasesdeltrap_app , pagamos €€€€");
-              });
-            </script>
           </li>
         </ul>
       </div>
@@ -65,15 +61,11 @@
           </div>
 
           <ul class="list-group">
-            
           </ul>
-          
         </div>
       </section>
     </div>
   </div>
-
-
 
   <div class="template">
     <ul class="list-group">
@@ -84,13 +76,13 @@
           </div>
         </div>
         <div class="play-button">
-          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-play"></span> Escuchar</button>
+          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-play"></span> Escuchar </button>
         </div>
         <a class="download-button"  href="puta_mofa_de_audio.ogg" download="frases-del-trap.mp3">
           <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-download-alt"></span>   Descargar</button>
         </a>
         <a class="share-button">
-          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-share"></span> Comparte con tus colegas</button>
+          <button type="button" class="btn3d btn btn-default btn-lg"><span class="glyphicon glyphicon-share"></span> Compartir</button>
         </a>
       </li>
     </ul>
