--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Elige ➡️➡️</a>
+          <a class="navbar-brand" href="https://www.cumlouder.com/">Elige ➡️➡️</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a onclick="$('#section-yung-beef').animatescroll()">Yung Beef</a></li>
