--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Frases del trap</title>
   <meta charset="utf-8">
   <meta name="author" content="MWHE 2018/19">
-  <meta name="description" content="Práctica 4 de maquetación web con hojas de estilo">
+  <meta name="description" content="Las mejores frases del trap español">
   <meta name="keywords" content="html, css, web">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
