añadiendo autoUnlock de Howler + link instagram

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <!-- Call to action -->
       <ul class="list-unstyled list-inline text-center py-2">
         <li class="list-inline-item">
-          <h5 class="mb-1">SIGUENOS EN INSTAGRAM: @frasesdeltrap_app</h5>
+          <h5 class="mb-1">SIGUENOS EN INSTAGRAM: <a href="https://www.instagram.com/frasesdeltrap_app/">@frasesdeltrap_app</a> </a> </h5>
         </li>
       </ul>
       <!-- Call to action -->
