--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3"> 2019 D3s4rr0ll4d0 x pvDv
-      <a href="https://www.instagram.com/trapgame.edits/?hl=es"> Tirame beef </a>
+      <a href="https://www.instagram.com/frasesdeltrap_app/"> Tirame beef </a>
     </div>
     <!-- Copyright -->
   
