--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 
   <link rel="icon" href="images/hakim_mouse.png">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-71124106-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-71124106-2');
+</script>
+
+
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=2391736657811319&autoLogAppEvents=1"></script>
 
