añadiendo estilos y actualizando direccion de instagram

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <!-- Call to action -->
       <ul class="list-unstyled list-inline text-center py-2">
         <li class="list-inline-item">
-          <h5 class="mb-1">SIGUENOS EN INSTAGRAM: <a href="https://www.instagram.com/frasesdeltrap_app/">@frasesdeltrap_app</a> </a> </h5>
+          <h5 class="mb-1">SIGUENOS EN INSTAGRAM: <a href="https://www.instagram.com/www_frasesdeltrap_com/">@www_frasesdeltrap_com</a> </a> </h5>
         </li>
       </ul>
       <!-- Call to action -->
@@ -121,8 +121,9 @@
     <!-- Footer Elements -->
   
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"> 2019 D3s4rr0ll4d0 x pvDv
-      <a href="https://www.instagram.com/frasesdeltrap_app/"> Tirame beef </a>
+    <div class="footer-copyright text-center py-3"> 2019 developed 
+      x padu
+      <a href="https://www.instagram.com/www_frasesdeltrap_com/"> Tirame beef </a>
     </div>
     <!-- Copyright -->
   
